# coursework5

./: .gitignore  main.py  pyproject.toml
src/: __init__.py  db_manager.py  hh_api.py  vacancy.py  working_with_files.py
